# minGUI

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
MINGUI/core/: config.hpp  form_validator.hpp  localization.hpp  main_canvas.hpp  palette.hpp  point.hpp  text_edit.hpp  ui_context.hpp  ui_context_bridge.hpp  ui_defs.hpp  utf8.hpp
MINGUI/render/: primitives.hpp  render_bridge.hpp  render_queue.hpp
MINGUI/src/: button.cpp  checkbox.cpp  clickable.cpp  container.cpp  form.cpp  grid_layout.cpp  icon.cpp  icon_button.cpp  label.cpp  layout.cpp  main_canvas.cpp  render_queue.cpp  selector.cpp  text_edit.cpp  ui_context.cpp  ui_node.cpp  utf8.cpp
MINGUI/widgets/: abstract_button.hpp  button.hpp  checkbox.hpp  clickable.hpp  container.hpp  form.hpp  grid_layout.hpp  icon.hpp  icon_button.hpp  label.hpp  layout.hpp  selector.hpp  ui_node.hpp
